--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ i {
   font-weight: 600;
   font-size: 15px;
   cursor: pointer;
-  -webkit-box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1); 
-box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 15px 25px -15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 15px 25px -15px rgba(0, 0, 0, 0.1);
 }
 .lang {
   display: flex;
@@ -89,13 +89,13 @@ box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1);
   gap: 30px;
 }
 
-.lang i{
-    cursor: pointer;
+.lang i {
+  cursor: pointer;
 }
 
 .container {
-    max-width: 900px;
-    max-height: 600px;
+  max-width: 1200px;
+  max-height: 600px;
   display: flex;
   flex-direction: column;
   justify-items: center;
@@ -109,6 +109,7 @@ box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1);
   font-weight: 700;
   color: var(--main-text-color);
   font-size: 50px;
+  text-align: center;
 }
 
 .search {
@@ -118,13 +119,12 @@ box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1);
   flex-direction: row;
   gap: 20px;
   width: 90%;
-
 }
 
-.search .img{
-    height: 40px;
-    position: unset;
-    left: -100px;
+.search .img {
+  height: 40px;
+  position: unset;
+  left: -100px;
 }
 
 .search .city-search {
@@ -138,8 +138,8 @@ box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1);
   height: 55px;
   width: 70%;
   gap: 10px;
- -webkit-box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1); 
-box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 15px 25px -15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 15px 25px -15px rgba(0, 0, 0, 0.1);
 }
 
 .search .city-search .search-icon {
@@ -167,11 +167,11 @@ box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1);
 .search .city-search .search-input input:focus {
   outline: none;
 }
-.search .city-search .search-input input::placeholder{
-    opacity: 65%;
-    font-weight: 600;
-    font-size: 15px;
-} 
+.search .city-search .search-input input::placeholder {
+  opacity: 65%;
+  font-weight: 600;
+  font-size: 15px;
+}
 
 .search .find-location {
   color: var(--logo-color);
@@ -183,113 +183,113 @@ box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1);
   font-family: "Inter", sans-serif;
   font-weight: 500;
   font-size: 15px;
-  -webkit-box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1); 
-box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 15px 25px -15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 15px 25px -15px rgba(0, 0, 0, 0.1);
 }
-.search .find-location i{
-    font-size: 25px;
+.search .find-location i {
+  font-size: 25px;
 }
 
 .stats {
   height: 350px;
-  
+
   width: 100%;
-  background-color: var(--secondary-color);
+  /* background-color: var(--secondary-color); */
+
+  
+  border: 1px solid rgba(white, 0.6);
+  background-color: rgba(var(--secondary-color), 0.1);
+  backdrop-filter: blur(2px);
+  box-shadow: 0px calc(var(6rem) / 6) calc(var(6rem) / 3) rgba(black, 0.1);
+
+
   border-radius: 8px;
   margin-top: 20px;
+
   text-align: center;
   display: flex;
   flex-direction: row;
-
   align-items: center;
   gap: 10px;
-  -webkit-box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.08); 
-    box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.08);
-  
+
+  /* -webkit-box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.08); 
+    box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.08); */
 }
 
 .stats .main {
-    width: 40%;
+  width: 40%;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 3px;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 3px;
+  align-items: center;
 }
 .stats .main .icon img {
-   
 }
 
-.country-flag .flag{
+.country-flag .flag {
   height: 20px;
   border-radius: 5px;
 }
 
 .stats .main .condition {
-    font-weight: 500;
-    font-size: 25px;
+  font-weight: 500;
+  font-size: 25px;
 }
 .stats .main .temp-c-main {
-    gap: 5px;
-    font-size: 45px;
-    font-weight: 700;
+  gap: 5px;
+  font-size: 45px;
+  font-weight: 700;
 }
 
 .stats .main .temp-f-main {
-    gap: 5px;
-    font-size: 25px;
+  gap: 5px;
+  font-size: 25px;
 }
 .stats .main .name {
-    font-size: 25px;
-    font-weight: 500;
+  font-size: 25px;
+  font-weight: 500;
 }
 .stats .main .country-flag {
-    gap: 10px;
-    font-size: 15px;
+  gap: 10px;
+  font-size: 15px;
 }
 .stats .main .last-updated {
-    font-size: 11px;
-    font-weight: 600;
+  font-size: 11px;
+  font-weight: 600;
 }
 
-
-
-
-.stats .page-1  {
-   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 15px;
-    width: 30%;
+.stats .page-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 15px;
+  width: 30%;
 }
 
-.stats .page-2  {
-   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 15px;
-    width: 30%;
+.stats .page-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 15px;
+  width: 30%;
 }
-
-
 
 .stat .sp {
-   
-    display: flex;
-    font-size: 15px;
-    font-weight: 400;
-    width: 85%;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}    
-.stat .sp .v{
-    font-weight: bold;
+  display: flex;
+  font-size: 15px;
+  font-weight: 400;
+  width: 85%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-
+.stat .sp .v {
+  font-weight: bold;
+}
 
 .button {
   transition: 0.2s;
@@ -302,166 +302,252 @@ box-shadow: 0px 15px 25px -15px rgba(0,0,0,0.1);
   -moz-box-shadow: 2px 10px 45px -27px rgba(0, 0, 0, 0.73);
 }
 
-
-
 @media screen and (min-width: 1400px) {
-
-   
-
   .stats {
-      margin-top: 50px;
+    margin-top: 50px;
   }
-
 }
 
-
-
-
-
-
 #background-wrap {
-    bottom: 0;
-	left: 0;
-	padding-top: 200px;
-	position: fixed;
-    height: 100vh;
-	right: 0;
-	top: 0;
-	z-index: -1;
-    opacity: 50%;
+  bottom: 0;
+  left: 0;
+  padding-top: 200px;
+  position: fixed;
+  height: 100vh;
+  right: 0;
+  top: 0;
+  z-index: -1;
+  opacity: 50%;
 }
 
 /* KEYFRAMES */
 
 @-webkit-keyframes animateCloud {
-    0% {
-        margin-left: -1000px;
-    }
-    100% {
-        margin-left: 100%;
-    }
+  0% {
+    margin-left: -1000px;
+  }
+  100% {
+    margin-left: 100%;
+  }
 }
 
 @-moz-keyframes animateCloud {
-    0% {
-        margin-left: -1000px;
-    }
-    100% {
-        margin-left: 100%;
-    }
+  0% {
+    margin-left: -1000px;
+  }
+  100% {
+    margin-left: 100%;
+  }
 }
 
 @keyframes animateCloud {
-    0% {
-        margin-left: -1000px;
-    }
-    100% {
-        margin-left: 100%;
-    }
+  0% {
+    margin-left: -1000px;
+  }
+  100% {
+    margin-left: 100%;
+  }
 }
 
 /* ANIMATIONS */
 
 .x1 {
-	-webkit-animation: animateCloud 60s linear infinite;
-	-moz-animation: animateCloud  60s linear infinite;
-	animation: animateCloud  60s linear infinite;
-	
-	-webkit-transform: scale(0.65);
-	-moz-transform: scale(0.65);
-	transform: scale(0.65);
+  -webkit-animation: animateCloud 60s linear infinite;
+  -moz-animation: animateCloud 60s linear infinite;
+  animation: animateCloud 60s linear infinite;
+
+  -webkit-transform: scale(0.65);
+  -moz-transform: scale(0.65);
+  transform: scale(0.65);
 }
 
 .x2 {
-	-webkit-animation: animateCloud  80s linear infinite;
-	-moz-animation: animateCloud  80s linear infinite;
-	animation: animateCloud  80s linear infinite;
-	
-	-webkit-transform: scale(0.3);
-	-moz-transform: scale(0.3);
-	transform: scale(0.3);
+  -webkit-animation: animateCloud 80s linear infinite;
+  -moz-animation: animateCloud 80s linear infinite;
+  animation: animateCloud 80s linear infinite;
+
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  transform: scale(0.3);
 }
 
 .x3 {
-	-webkit-animation: animateCloud  100s linear infinite;
-	-moz-animation: animateCloud  100s linear infinite;
-	animation: animateCloud  100s linear infinite;
-	
-	-webkit-transform: scale(0.5);
-	-moz-transform: scale(0.5);
-	transform: scale(0.5);
+  -webkit-animation: animateCloud 100s linear infinite;
+  -moz-animation: animateCloud 100s linear infinite;
+  animation: animateCloud 100s linear infinite;
+
+  -webkit-transform: scale(0.5);
+  -moz-transform: scale(0.5);
+  transform: scale(0.5);
 }
 
 .x4 {
-	-webkit-animation: animateCloud  120s linear infinite;
-	-moz-animation: animateCloud  120s linear infinite;
-	animation: animateCloud  120s linear infinite;
-	
-	-webkit-transform: scale(0.4);
-	-moz-transform: scale(0.4);
-	transform: scale(0.4);
+  -webkit-animation: animateCloud 120s linear infinite;
+  -moz-animation: animateCloud 120s linear infinite;
+  animation: animateCloud 120s linear infinite;
+
+  -webkit-transform: scale(0.4);
+  -moz-transform: scale(0.4);
+  transform: scale(0.4);
 }
 
 .x5 {
-	-webkit-animation: animateCloud  150s linear infinite;
-	-moz-animation: animateCloud  150s linear infinite;
-	animation: animateCloud  150s linear infinite;
-	
-	-webkit-transform: scale(0.55);
-	-moz-transform: scale(0.55);
-	transform: scale(0.55);
+  -webkit-animation: animateCloud 150s linear infinite;
+  -moz-animation: animateCloud 150s linear infinite;
+  animation: animateCloud 150s linear infinite;
+
+  -webkit-transform: scale(0.55);
+  -moz-transform: scale(0.55);
+  transform: scale(0.55);
 }
 
 /* OBJECTS */
 
 .cloud {
-	background: #D3E9EF;
-	-webkit-border-radius: 100px;
-	-moz-border-radius: 100px;
-	border-radius: 100px;
-	
-	-webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
-	-moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  background: #d3e9ef;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
 
-	height: 120px;
-	position: relative;
-	width: 350px;
-    margin: 20px;
+  -webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+
+  height: 120px;
+  position: relative;
+  width: 350px;
+  margin: 20px;
 }
 
-.cloud:after, .cloud:before {
-    background: #D3E9EF;
-	content: '';
-	position: absolute;
-	z-indeX: -1;
+.cloud:after,
+.cloud:before {
+  background: #d3e9ef;
+  content: "";
+  position: absolute;
+  z-index: -1;
 }
 
 .cloud:after {
-	-webkit-border-radius: 100px;
-	-moz-border-radius: 100px;
-	border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
 
-	height: 100px;
-	left: 50px;
-	top: -50px;
-	width: 100px;
+  height: 100px;
+  left: 50px;
+  top: -50px;
+  width: 100px;
 }
 
 .cloud:before {
-	-webkit-border-radius: 200px;
-	-moz-border-radius: 200px;
-	border-radius: 200px;
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  border-radius: 200px;
 
-	width: 180px;
-	height: 180px;
-	right: 50px;
-	top: -90px;
+  width: 180px;
+  height: 180px;
+  right: 50px;
+  top: -90px;
 }
 
+/*     */
 
+.loader {
+  position: relative;
+  margin: 0 auto;
+}
 
+.loader-inner {
+  bottom: 0;
+  height: 60px;
+  left: 0;
+  margin: auto;
+  position: relative;
+  right: 0;
+  top: 0;
+  width: 100px;
+}
 
+.loader-line-wrap {
+  animation: spin 2000ms cubic-bezier(0.175, 0.885, 0.32, 1.275) infinite;
+  box-sizing: border-box;
+  height: 50px;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  transform-origin: 50% 100%;
+  width: 100px;
+}
+.loader-line {
+  border: 4px solid transparent;
+  border-radius: 100%;
+  box-sizing: border-box;
+  height: 100px;
+  left: 0;
+  margin: 0 auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100px;
+}
+.loader-line-wrap:nth-child(1) {
+  animation-delay: -50ms;
+}
+.loader-line-wrap:nth-child(2) {
+  animation-delay: -100ms;
+}
+.loader-line-wrap:nth-child(3) {
+  animation-delay: -150ms;
+}
+.loader-line-wrap:nth-child(4) {
+  animation-delay: -200ms;
+}
+.loader-line-wrap:nth-child(5) {
+  animation-delay: -250ms;
+}
+
+.loader-line-wrap:nth-child(1) .loader-line {
+  border-color: hsl(0, 80%, 60%);
+  height: 90px;
+  width: 90px;
+  top: 7px;
+}
+.loader-line-wrap:nth-child(2) .loader-line {
+  border-color: hsl(60, 80%, 60%);
+  height: 76px;
+  width: 76px;
+  top: 14px;
+}
+.loader-line-wrap:nth-child(3) .loader-line {
+  border-color: hsl(120, 80%, 60%);
+  height: 62px;
+  width: 62px;
+  top: 21px;
+}
+.loader-line-wrap:nth-child(4) .loader-line {
+  border-color: hsl(180, 80%, 60%);
+  height: 48px;
+  width: 48px;
+  top: 28px;
+}
+.loader-line-wrap:nth-child(5) .loader-line {
+  border-color: hsl(240, 80%, 60%);
+  height: 34px;
+  width: 34px;
+  top: 35px;
+}
+
+@keyframes spin {
+  0%,
+  15% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/*       */
 footer {
   position: absolute;
   bottom: 25px;
