--- a/style.css
+++ b/style.css
@@ -22,12 +22,12 @@ body {
   width: 100%;
   background-color: var(--primary-color);
   font-family: "Poppins", sans-serif;
-  display: flex;
 
+  display: flex;
   justify-content: center;
   align-items: center;
+
   flex-direction: column;
-  overflow-x: hidden;
   color: var(--text-font-color);
 }
 
@@ -100,7 +100,7 @@ i {
   flex-direction: column;
   justify-items: center;
   align-items: center;
-  margin-top: 40px;
+  margin: 40px 10px 10px 10px;
   gap: 10px;
 }
 
@@ -108,7 +108,7 @@ i {
   font-family: "Gaegu", cursive;
   font-weight: 700;
   color: var(--main-text-color);
-  font-size: 50px;
+  font-size: 55px;
   text-align: center;
 }
 
@@ -196,12 +196,10 @@ i {
   width: 100%;
   /* background-color: var(--secondary-color); */
 
-  
   border: 1px solid rgba(white, 0.6);
   background-color: rgba(var(--secondary-color), 0.1);
   backdrop-filter: blur(2px);
   box-shadow: 0px calc(var(6rem) / 6) calc(var(6rem) / 3) rgba(black, 0.1);
-
 
   border-radius: 8px;
   margin-top: 20px;
@@ -258,6 +256,7 @@ i {
 .stats .main .last-updated {
   font-size: 11px;
   font-weight: 600;
+  margin-top: 15px;
 }
 
 .stats .page-1 {
@@ -302,9 +301,89 @@ i {
   -moz-box-shadow: 2px 10px 45px -27px rgba(0, 0, 0, 0.73);
 }
 
+.error {
+  width: 100%;
+  justify-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  gap: 10px;
+}
+.error img {
+  height: 70px;
+}
+.error p {
+  font-weight: 500;
+  font-size: 18px;
+}
+.error p .error-message {
+  font-weight: 700;
+}
+
 @media screen and (min-width: 1400px) {
   .stats {
     margin-top: 50px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+.container .search-text {
+    font-size: 45px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    overflow-x: hidden;
+
+    height: 100%;
+  }
+
+  .header {
+    gap: 25px;
+    flex-direction: column;
+    position: relative;
+  }
+  .right {
+    gap: 15px;
+    flex-direction: column;
+  }
+  .container .search-text {
+    font-size: 35px;
+  }
+  .search {
+    flex-direction: column;
+  }
+  .search .city-search .search-input input::placeholder {
+    font-weight: 600;
+    font-size: 14px;
+  }
+  .search .city-search .search-input {
+    width: 100%;
+  }
+  .search .city-search {
+    padding: 10px;
+    width: 100%;
+  }
+  .search .find-location {
+    width: 60%;
+  }
+  .stats {
+    flex-direction: column;
+    gap: 50px;
+  }
+  .stats .main {
+    width: 80%;
+  }
+  .stats .page-1 {
+    width: 80%;
+  }
+  .stats .page-2 {
+    width: 80%;
+  }
+  footer {
+    display: none;
   }
 }
 
