--- a/style.css
+++ b/style.css
@@ -9,12 +9,25 @@
 }
 
 :root {
+  --primary-color: #16171b;
+  --secondary-color: #212528;
+  --text-color: #a4a6a7;
+  --main-text-color: #b5c0ff;
+  --text-font-color: #edeeee;
+  --logo-color: #edeeee;
+  --cloud-color: #9bb4bb;
+}
+
+[weatherStyle="rain"] {
   --primary-color: #ffffff;
   --secondary-color: #f9f9f9;
   --text-color: #555555;
   --main-text-color: #9babc5;
   --text-font-color: #000000;
   --logo-color: #2f2e41;
+  --cloud-color: #d3e9ef;
+
+  
 }
 
 body {
@@ -22,7 +35,6 @@ body {
   width: 100%;
   background-color: var(--primary-color);
   font-family: "Poppins", sans-serif;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,8 +81,9 @@ i {
   justify-content: center;
   align-items: center;
   gap: 5px;
+  text-decoration: none;
   background-color: var(--secondary-color);
-
+  color: var(--text-font-color);
   border: 1px solid transparent;
   border-radius: 8px;
   width: 156px;
@@ -160,6 +173,7 @@ i {
   width: 100%;
   height: 100%;
   background-color: transparent;
+  color: var(--text-font-color);
   font-size: 18px;
   font-weight: 600;
 }
@@ -328,7 +342,7 @@ i {
 }
 
 @media screen and (max-width: 850px) {
-.container .search-text {
+  .container .search-text {
     font-size: 45px;
   }
 }
@@ -483,7 +497,7 @@ i {
 /* OBJECTS */
 
 .cloud {
-  background: #d3e9ef;
+  background: var(--cloud-color);
   -webkit-border-radius: 100px;
   -moz-border-radius: 100px;
   border-radius: 100px;
@@ -500,7 +514,7 @@ i {
 
 .cloud:after,
 .cloud:before {
-  background: #d3e9ef;
+  background: var(--cloud-color);
   content: "";
   position: absolute;
   z-index: -1;
@@ -632,4 +646,108 @@ footer {
   bottom: 25px;
   font-size: 12px;
   color: var(--text-color);
+}
+
+
+
+/*  */
+
+
+
+
+.rain {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.rain.back-row {
+  display: block;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  bottom: 60px;
+  opacity: 0.5;
+}
+
+
+.drop {
+  position: absolute;
+  bottom: 100%;
+  width: 15px;
+  height: 120px;
+  pointer-events: none;
+  animation: drop 0.5s linear infinite;
+}
+
+@keyframes drop {
+  0% {
+    transform: translateY(0vh);
+  }
+  75% {
+    transform: translateY(90vh);
+  }
+  100% {
+    transform: translateY(90vh);
+  }
+}
+
+.stem {
+  width: 1px;
+  height: 60%;
+  margin-left: 7px;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.25));
+  animation: stem 0.5s linear infinite;
+}
+
+@keyframes stem {
+  0% {
+    opacity: 1;
+  }
+  65% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.splat {
+  width: 15px;
+  height: 10px;
+  border-top: 2px dotted rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  opacity: 1;
+  transform: scale(0);
+  animation: splat 0.5s linear infinite;
+  display: none;
+}
+
+.splat-toggle .splat {
+  display: block;
+}
+
+@keyframes splat {
+  0% {
+    opacity: 1;
+    transform: scale(0);
+  }
+  80% {
+    opacity: 1;
+    transform: scale(0);
+  }
+  90% {
+    opacity: 0.5;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1.5);
+  }
 }
