--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   --primary-color: #16171b;
   --secondary-color: #212528;
   --text-color: #a4a6a7;
-  --main-text-color: #b5c0ff;
+  --main-text-color: #6ED4D4;
   --text-font-color: #edeeee;
   --logo-color: #edeeee;
   --cloud-color: #9bb4bb;
