--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ i {
 .stats {
   height: 350px;
 
-  width: 100%;
+  width: 90%;
   /* background-color: var(--secondary-color); */
 
   border: 1px solid rgba(white, 0.6);
@@ -229,7 +229,7 @@ i {
 }
 
 .stats .main {
-  width: 40%;
+  width: 33%;
 
   display: flex;
   flex-direction: column;
@@ -278,8 +278,9 @@ i {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  text-align: center;
   gap: 15px;
-  width: 30%;
+  width: 33%;
 }
 
 .stats .page-2 {
@@ -288,7 +289,7 @@ i {
   justify-content: center;
   align-items: flex-start;
   gap: 15px;
-  width: 30%;
+  width: 33%;
 }
 
 .stat .sp {
