--- a/style.css
+++ b/style.css
@@ -428,7 +428,9 @@ i {
   .stats .page-2 {
     width: 80%;
   }
-  
+  footer {
+    display: none;
+  }
 }
 
 #background-wrap {
@@ -671,7 +673,7 @@ i {
 }
 
 /*       */
-.footer {
+footer {
   position: absolute;
   bottom: 25px;
   font-size: 12px;
